<resources>
    <string name="app_name">EmotionPlus</string>
    <string name="title_main">Main</string>
    <string name="title_homekit">HomeKit</string>
    <string name="title_recommendation">Recommendations</string>
    <string name="title_game">Game</string>
    <string name="tap_here">tap here</string>
    <string name="tap_emotion">Tap here to view my emotions</string>
    <string name="tap_homekit">Tap here to view homekit</string>
    <string name="tap_recommendations">Tap here to view my recommendations</string>
    <string name="tap_game">Tap here to view games</string>
    <string name="action_settings">Settings</string>
    <string name="no_bridge">No Bridge Found.   Start Bridge Search</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_find_bridge">Find new bridge</string>
    <string name="btn_random">Random Brightness</string>
    <string name="btn_breathe">Breathing Light</string>
    <string name="btn_alert">Alert</string>
    <string name="btn_on">Turn On</string>
    <string name="btn_off">Turn Off</string>
    <string name="search_progress">Searching ...</string>
    <string name="connecting">Connecting ...</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="txt_could_not_connect">No connection</string>
    <string name="txt_click_random_button">Click the Random Lights Button to set your lamps to random colours.</string>
    <string name="could_not_find_bridge">Hue cannot find your bridge. Please check that it is connected to the same Wi-Fi router as your app and press</string>
    <string name="btn_more">More</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="enter_light_name">Enter light name</string>
    <string name="txt_sdk_version">SDK Version</string>
    <string name="menu_find_bridge">Find new Bridge</string>
    <string name="menu_refresh">Refresh</string>
    <string name="btn_retry">Retry</string>
    <string name="searching_for_bridges">Searching for Bridges</string>
    <string name="txt_selectbridges">Available Access Points</string>
    <string name="txt_pushlink">Pushlink</string>
    <string name="press_pushlink_button">Press the link button on the bridge</string>
    <string name="txt_select_smartbridge">Please select a bridge to use for this app</string>
    <string name="title_error">Error</string>
    <string name="txt_last_heartbeat">Last Heartbeat : </string>
    <string name="restaurant_recommended">Restaurant Recommended</string>
    <string name="sports_recommendations">Sports Recommendations</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="the_day_before_yesterday">The day before yesterday</string>
    <string name="three_days_ago">Three days ago</string>
    <string name="four_days_ago">Four days ago</string>
    <string name="five_days_ago">Five days ago</string>
    <string name="six_days_ago">Six days ago</string>
</resources>
