<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_weight="0.6"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Your Emotions Today"
            android:id="@+id/textView"/>

        <com.github.mikephil.charting.charts.RadarChart
            android:id="@+id/chart1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/day1history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/today"/>
            <TextView
                android:id="@+id/day2history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/yesterday"/>
            <TextView
                android:id="@+id/day3history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/the_day_before_yesterday"/>
            <TextView
                android:id="@+id/day4history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/three_days_ago"/>
            <TextView
                android:id="@+id/day5history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/four_days_ago"/>
            <TextView
                android:id="@+id/day6history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/five_days_ago"/>
            <TextView
                android:id="@+id/day7history"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="1dp"
                android:background="@drawable/bottom_border"
                android:gravity="center"
                android:text="@string/six_days_ago"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>